--- a/examples/nextjs-cursor-chat/package.json
+++ b/examples/nextjs-cursor-chat/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@yomo/presencejs": "^1.0.0-alpha.4",
     "next": "12.1.6",
+    "node-fetch": "^3.2.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "node-fetch": "^3.2.4"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "eslint": "8.15.0",
